# optimization-cloth-tutorial

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: ClothAssert.hpp  ClothMesh.hpp  Objective.hpp  Solver.hpp  main.cpp
test/: main.cpp  test.cpp
